# yt-sl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  convert_backlog.py  install.sh  migrate_stories.py  videos.yaml  yt-sl.sh
.github/workflows/: ci.yml  opencode.yml  release.yml
Formula/: yt-sl.rb
backlog/: config.yml
backlog/docs/: doc-10 - OCR-Context.md  doc-11 - Functional-DDD-YouTube-Video-Slide-Extractor.md  doc-12 - Rust-YouTube-Slide-Extractor-Technical-Research-Document.md  doc-3 - Document-Context.md  doc-4 - Shared-Domain-Concepts.md  doc-5 - Session-Context.md  doc-6 - Video-Context.md  doc-7 - Transcription-Context.md  doc-8 - Frame-Context.md  doc-9 - Deduplication-Context.md
backlog/tasks/: task-1 - CLI-Interface-Epic.md  task-10 - US-SESSION-04-Clean-Up-Temporary-Resources.md  (+46 more)
classifier/: program.md
docs/: EVENTSTORMING.md  EVENTSTORMING_FDD.md  EVENTSTORMING_FDD_INDEX.md  PROBLEM_STATEMENT.md  RUST_TECHNICAL_RESEARCH.md  SHARED_FDD.md
plans/: dependency_analysis.md  state.md  user_stories.md
poc/: Cargo.toml  README.md
poc/docs/research/: audio_transcription.md
poc/src/: lib.rs  main.rs
poc/src/cli/: mod.rs  progress.rs
poc/src/contexts/: mod.rs
poc/src/contexts/dedup/domain/: commands.rs  events.rs  handlers.rs  state.rs
poc/src/contexts/dedup/infrastructure/: comparer.rs  llm_verifier.rs  mod.rs  slide_selector.rs
poc/src/contexts/document/: mod.rs
poc/src/contexts/document/domain/: commands.rs  events.rs  handlers.rs  mod.rs  state.rs
poc/src/contexts/document/infrastructure/: markdown_writer.rs  mod.rs  pdf_generator.rs
poc/src/contexts/frame/domain/: commands.rs  events.rs  handlers.rs  state.rs
poc/src/contexts/frame/infrastructure/: extractor.rs  frame_storage.rs  mod.rs  perceptual_hash.rs
poc/src/contexts/ocr/domain/: commands.rs  events.rs  handlers.rs  state.rs
poc/src/contexts/ocr/infrastructure/: mod.rs  tesseract.rs
poc/src/contexts/session/domain/: commands.rs  events.rs  handlers.rs  state.rs
poc/src/contexts/session/infrastructure/: mod.rs  orchestrator.rs
poc/src/contexts/transcription/domain/: commands.rs  events.rs  handlers.rs  mod.rs  ports.rs  state.rs
poc/src/contexts/transcription/infrastructure/: audio_extractor.rs  mod.rs  native_transcriber.rs  openai_transcriber.rs
poc/src/contexts/video/: mod.rs
poc/src/contexts/video/domain/: commands.rs  events.rs  handlers.rs  state.rs
poc/src/contexts/video/infrastructure/: availability_checker.rs  downloader.rs  mod.rs  url_validator.rs
poc/src/session/: mod.rs
poc/src/shared/domain/: config.rs  error.rs  id.rs  mod.rs
poc/src/shared/infrastructure/: dependencies.rs  event_bus.rs  logging.rs  memory.rs  mod.rs  output_directory.rs
poc/tests/: e2e_llm.rs  e2e_pipeline.rs
requirements/: _index.yaml
src/: main.rs
(+19 files in other folders)
