[package]
name = "yt-sl-extractor"
version = "0.1.1"
edition = "2021"

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "process", "time", "sync", "fs", "io-util"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
os_info = "3.7"
rustc_version = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
url = "2.5"
regex = "1.10"
rand = "0.8"
tempfile = "3.10"
image = "0.24"
imageproc = "0.23"
ahash = "0.8"
indicatif = "0.17"
tera = "1.19"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"
whisper-rs = { version = "0.10", features = ["metal"] }
dirs = "5.0"
hound = "3.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1.4"
pretty_assertions = "1.4"
wiremock = "0.5"
mockall = "0.12"
